# vins_fusion_ros2

./: .gitignore  Athit VSLAM  CMakeLists.txt  README.md  package.xml
config/carla/: cam0_pinhole.yaml  cam1_pinhole.yaml  cam_front_left.yaml  carla_native.yaml  carla_native_mono.yaml  carla_native_stereo.yaml  carla_stereo.yaml  carla_stereo_0.5m_config.yaml  carla_stereo_imu.yaml  objects.json
config/carla_spared/: cam_front_right.yaml  carla_native.yaml  carla_native_stereo.yaml  carla_stereo.yaml  carla_stereo_0.5m_config.yaml  carla_stereo_imu.yaml
config/carla_spared_plus_old_config/: carla_native_mono.yaml  carla_stereo_0.5m_config.yaml  carla_stereo_imu_config.yaml  carla_stereo_imu_off.yaml  carla_stereo_imu_tuned.yaml  carla_stereo_off.yaml  exp_r2a_correct.yaml  exp_r2b_flip.yaml  exp_r2c_mono.yaml  exp_r3_wide.yaml  exp_roll180.yaml  exp_roll270.yaml  exp_roll90.yaml  exp_stereoonly.yaml
config/euroc/: euroc_test.yaml
config/kitti_odom/: kitti_det.yaml  kitti_test.yaml
figures/: make_dataflow_gif.py  make_livemode_gif.py  make_livemode_stereo_gif.py
launch/: carla_bag_rtab.launch.py  carla_native.launch.py  carla_native_multi.launch.py  carla_stereo.launch.py  carla_stereo_gps.launch.py  carla_stereo_imu.launch.py  carla_stereo_imu_gps.launch.py  vins_fusion_carla.launch.py
src/: carla_bag_test.cpp  carla_rtab_direct.cpp  vins_bag_reader.cpp  vins_estimator.cpp  vins_estimator_node.cpp
src/carla_cpp/: carla_vins_multi_node.cpp  carla_vins_node.cpp  carla_world.cpp  carla_world.hpp  conversions.hpp  frame_collector.hpp  keyboard_control.cpp  keyboard_control.hpp  mpc.hpp  multi_vins.cpp  multi_vins.hpp  noise_odom.hpp  ros_output.cpp  ros_output.hpp  types.hpp  vins_bridge.cpp  vins_bridge.hpp  vins_publisher.cpp  vins_publisher.hpp  wheel_odom.hpp
tf_detect/: CMakeLists.txt  EXPERIMENTS.md  carla_light_boxes.csv  package.xml
tf_detect/launch/: traffic_light_integrated.launch.py  traffic_light_state.launch.py
tf_detect/scripts/: draw_map_overview.py  dump_carla_traffic_light_boxes.py  estimate_light_position_from_pixel.py  main.py  make_traffic_light_slides.py  objects.json  register_vins_to_map.py  route_turn_from_path.py  traffic_light_state_node.py  validate_projection.py
tf_detect/scripts/install/: local_setup.sh  setup.sh
tf_detect/scripts/log/: latest_build
tf_detect/src/: cpp_node.cpp
vins/: CMakeLists.txt
vins/include/vins/estimator/: estimator.h  parameters.h
vins/include/vins/factor/: integration_base.h  pose_local_parameterization.h
vins/include/vins/gpl/: EigenQuaternionParameterization.h
vins/src/estimator/: estimator.cpp
vins/src/factor/: pose_local_parameterization.cpp
vins/src/gpl/: EigenQuaternionParameterization.cc
vins/src/initial/: initial_sfm.cpp
